--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Tune
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:cf2oUybo/bdmBFlKUR+L/XpMD1TNNpmAvJIUd+FYrLU=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
